# realtime_stitching_ubuntu

./: .gitignore  .useLK.cpp.kate-swp  CMakeLists.txt  readme.txt  stitching.cpp  video_stiching.cpp
include/: video_stitching.h
src/: main.cpp  video_stiching.cpp
